Curso sobre Django 2 com Matheus Battisti

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -165,7 +165,7 @@
 					<li><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> -->
 					<li><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso gratuito de Python</a></li>
-					<li><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Videoaula sobre Django 2 Web Framework</a></li>
+					<li><a href="https://www.youtube.com/watch?v=LZsjuSBW5YM&list=PLnDvRpP8BnewqnMzRnBT5LeTpld5bMvsj&index=1"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Django 2 Web Framework</a></li>
 					<li><a href="https://www.youtube.com/watch?v=K0pVZmw_pJU"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Criando um Blog com Python e o framework Django</a></li>
 					<li><a href="https://evolutio.io/curso/flask_by_juliarizza"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Flask para Completos Iniciantes</a></li>
 					<li><a href="https://evolutio.io/curso/ngmasters_javascript"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso Completo de JavaScript</a></li>
