--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -89,7 +89,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Roteiros práticos - 30 pts <b>(26/10)</b> <!--<i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> - Especificação <img src="images/deadline.png"" alt="" height="25" width="19"></i></a>--></li>
+					<li>Roteiros práticos - 30 pts <b>(26/10)</b> <i><a href="aulas/lab-programacao/Roteiro-Trabalho1.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<li>Trabalho - 70 pts <b>(14/12)</b> <i><a href="aulas/lab-programacao/Trabalho-LabES.pdf"> - Especificação <img src="images/new2.gif" alt="" height="11" width="28"></i></a></li>
 					<!--<li>Trabalho 3 - 30 pts <b>(01/09)</b> </li>
 					<li>Vídeo - 10 pts <b>(01/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li> -->
