Primeira parte do Ex. Pratico 6

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -117,12 +117,12 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/PY5hcxTVCCg"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gKJXrID8iEY"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/sRFBjxgZXBs"> Ver Videoaula </a>)</li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UViaEASkcXQ"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UViaEASkcXQ"> Ver Videoaula </a>)</li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/myKvJ2Mtgnw"> Ver Videoaula </a>)</li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/94g9WaSeh7s"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/c4Oa0tHwTdE"> Ver Videoaula </a>)</li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8a</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Nc2W4q3h9E0"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/As_VeBHQLlo"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8b</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/As_VeBHQLlo"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div>
 					<!-- <div>
