Coloquei o meu nome com titulacao em todos os sites das disciplinas

--- a/material.html
+++ b/material.html
@@ -70,6 +70,7 @@
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<!--<span>November 10, 2017</span>-->
 				<h2>Disciplinas 2º Semestre de 2022 <br>CEFET-MG</h2>
+				<span>Prof. Dr. Eduardo Cunha Campos</span>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
