--- a/poo-lab.html
+++ b/poo-lab.html
@@ -70,6 +70,7 @@
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<span>Disciplinas 2º Semestre de 2022 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
+				<span>Prof. Dr. Eduardo Cunha Campos</span>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
