--- a/poo-lab.html
+++ b/poo-lab.html
@@ -143,10 +143,10 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div> -->
-					<!--<div>
+					<div>
 					<b>Códigos-fontes:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica8/src"> <i>Código Incompleto da Prática 8</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99439"> Aula Síncrona Gravada - Prática 1</a></li>
@@ -158,9 +158,9 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=104021"> Aula Síncrona Gravada - Prática 6 (Continuação)</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=105678"> Aula Síncrona Gravada - Prática 7 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6a/src"> <i>Código da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>	
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ComparatorExample/src"> <i>Código com um exemplo do Comparator em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6a/src"> <i>Código da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
+					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ComparatorExample/src"> <i>Código com um exemplo do Comparator em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data e Hora em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/CidadesDoBrasil/src"> <i>Código para lidar com HashMap em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho1_pc2.pdf"> Notas do Trabalho 1 (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
