lista 02 de PC2

--- a/poo-virtual.html
+++ b/poo-virtual.html
@@ -91,8 +91,8 @@
 					<li>Prova 3 - 30 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)</li>
 					<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
-					<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>
-					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->			
+					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
+					<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>		
 					</ul>
 					</div>  
 					<b>Material:</b> 
