Aviso sobre aulas de lab. de pc2

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -76,6 +76,7 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
+					<h2>- Não haverá aula hoje (17/11) de laboratório!!!</h2>
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
