--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -123,13 +123,13 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="https://nodejs.dev/learn/introduction-to-nodejs"> Aula 05 - NODE.JS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=iORW8s3O_xc&t=2591s"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Instalação) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 07 - IMC.pdf"> Aula 07 - Cálculo do IMC </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>
