--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 				<img src="images/about.jpg" alt="" height="380" width="300">
 				<!--<span>Bio</span>-->
 				<br>
-				<span>Hi! I'm <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?id=K4350860Z5">Dr. Eduardo Campos</a>, a Professor at Federal Center for Technological Education (CEFET-MG), Brazil. I earned my PhD in Software Engineering in 2019 from UFU under the supervision of <a href="http://lascam.facom.ufu.br/cms/"> Dr. Marcelo Maia.</a></span> 
+				<span>Hi! I'm <a href="https://www.decom.cefetmg.br/pessoas/professores-efetivos/">Dr. Eduardo Campos</a>, a Professor at Federal Center for Technological Education, Brazil. 
+				See my <a href="papers/edu-cv.pdf"><u>academic vitae</u></a> for a summary. I earned my PhD in Software Engineering in 2019 from UFU under the supervision of <a href="http://lascam.facom.ufu.br/cms/"> Dr. Marcelo Maia.</a></span> 
 				<h2>
 				<a href="index.html"><i class="icon-home"></i></a></li>
 				<a href="https://www.facebook.com/eduardo.campos.9256028"><i class="icon-facebook"></i></a>
