Coloquei o material no site da disciplina de PC2, ES, PC2. Lab e ES. Lab

--- a/gsi526.html
+++ b/gsi526.html
@@ -79,9 +79,9 @@
 					<div>
 					<b>Plano e Temas:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/plano-didatico-es.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano Didático - ES.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2022.2)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2022.2)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
@@ -99,7 +99,7 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-introducao.pptx"> Aula 01 - Introdução à Engenharia de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-introducao.pptx"> Aula 01 - Introdução à Engenharia de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
@@ -160,8 +160,8 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>26/09</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>31/10</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>10/04</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>31/10</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>05/12</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
