--- a/poo.html
+++ b/poo.html
@@ -79,8 +79,9 @@
 					<div>
 					<b>Plano e Material extra:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/Plano Didático - PC2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Apostila Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="http://www.decom.ufop.br/romildo/bcc221.2011-1/slides/cap14.pdf"> <i>Livro: Java Como Programar 8ª edição (Deitel)</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>
 					<div>
@@ -92,13 +93,13 @@
 					<!--<li><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
 					<li>Lista 01 - 5 pts <b>(09/05)</b></li>
 					<li>Lista 02 - 5 pts <b>(20/06)</b></li>
-					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>		
+					<!--<li><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->		
 					</ul>
 					</div>  
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução a POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=4p1n7CU-8Nw"> Ver Videoaula </a>)--></li>
@@ -165,13 +166,12 @@
 					<!--<div>
 					<b>Links diversos:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					</ul>
-					</div>--> 
+					</div>-->
 				</div>
 			</div>
 		</div>
