--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -79,8 +79,8 @@
 					<div>
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Plano Didático - ES_LAB.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Roteiro_Trabalho2.pdf"> Roteiro de Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_grupos.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>					
@@ -123,9 +123,9 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Aula 01 - Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Web Services.pdf"> Aula 02 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>-->
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="https://nodejs.dev/learn/introduction-to-nodejs"> Aula 05 - NODE.JS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=iORW8s3O_xc&t=2591s"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></button></li>
@@ -150,7 +150,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> -->
 						</ul> 
 					</div> 
-					<div>
+					<!--<div>
 					<b>Videoaulas:</b>
 					<ul>
 					<!--<li><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
@@ -224,13 +224,13 @@
 				</div>
 			</a>
 		</div>
-	</div>-->
+	</div>
 
 	<footer>
 		<div>
 		&copy; 2016 Free HTML5. All Rights Reserved. Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a>
 		</div>
-	</footer>
+	</footer>-->
 
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
