Novas videoaulas sobre frameworks e cookbooks de tecnologias

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -132,9 +132,9 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Instalação) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 07 - IMC.pdf"> Aula 07 - Cálculo do IMC </a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>
-						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
-						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_Lu1JGrPl6g" target="_blank"> <b>React #1 - Preparando o ambiente para desenvolvimento </b></a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>-->
+						<!--<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte 1 </b></a></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_Lu1JGrPl6g" target="_blank"> <b>React - Preparando o ambiente para desenvolvimento </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 1) </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=1mLbR-TbNdM" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 2) </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg" target="_blank"> <b>Tutorial sobre Angular.js </b></a></li>
@@ -150,7 +150,7 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> -->
 						</ul> 
 					</div> 
-					<!--<div>
+					<div>
 					<b>Videoaulas:</b>
 					<ul>
 					<!--<li><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
@@ -165,7 +165,7 @@
 					<li><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> -->
-					<!--<li><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso gratuito de Python</a></li>
+					<li><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso gratuito de Python</a></li>
 					<li><a href="https://www.youtube.com/watch?v=LZsjuSBW5YM&list=PLnDvRpP8BnewqnMzRnBT5LeTpld5bMvsj&index=1"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Django 2 Web Framework</a></li>
 					<li><a href="https://www.youtube.com/watch?v=K0pVZmw_pJU"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Criando um Blog com Python e o framework Django</a></li>
 					<li><a href="https://evolutio.io/curso/flask_by_juliarizza"> <img src="images/youtube.png" alt="" height="20" width="27"> [Python] Curso de Flask para Completos Iniciantes</a></li>
