Temas de TCC + Agenda de Atendimento de TCC

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 				<a href="https://twitter.com/eduardocunha080"><i class="icon-twitter"></i></a>
 				<a href="https://www.linkedin.com/in/eduardo-cunha-campos-82319a47/"><i class="icon-linkedin"></i></a>
 				<a href="material.html"><i class="icon-book"></i></a>
+				<a href="aulas/gsi526/agenda_atendimento_TCC.pdf"><i class="icon-watch"></i></a>
+				<a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"><i class="icon-eye"></i></a>
 				</h2>
 			</div>
 		</div>
