Notas do trabalho 2: fase 1

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -97,7 +97,7 @@
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>-->
 					<!--<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 28/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<ul>
-					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 15 pts <b>(31/05)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li>
+					<li><u>Fase 1:</u> Diagrama de Classes do Sistema - 15 pts <b>(31/05)</b> - <i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
 					<li><u>Fase 2:</u> Apresentação do Sistema  - 55 pts <b>(05/07)</b> <!-- - <i><a href="aulas/lab-programacao/notas_trabalho2_fase2.pdf"> Notas </a> <img src="images/new2.gif" alt="" height="11" width="28"></i>--></li> 
 					<!-- <li><i><a href="aulas/lab-programacao/notas_trabalho2_fase1.pdf"> Notas do Trabalho 2 (Fase 1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
 					</ul>
