Desabilitei o klimed da minha home page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<a href="material.html"><i class="icon-book"></i></a>
 				<a href="aulas/gsi526/agenda_atendimento_TCC.pdf"><i class="icon-watch"></i></a>
 				<a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"><i class="icon-eye"></i></a>
-				<a href="https://www.youtube.com/watch?v=KsGnf37hIko"> <img src="images/495.svg" alt="Klimed" height="28" width="28"></a>
+				<!--<a href="https://www.youtube.com/watch?v=KsGnf37hIko"> <img src="images/495.svg" alt="Klimed" height="28" width="28"></a>-->
 				</h2>
 			</div>
 		</div>
