--- a/index.html
+++ b/index.html
@@ -99,14 +99,25 @@
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post">
-					<div class="fh5co-entry padding">
+				<div class="fh5co-entry padding">
+					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<div>
+						<span class="fh5co-post-date">September 28, 2023</span>
+						<h2><a href="certificate.html">Certificate of Reviewing for Information and Software Technology Journal</a></h2>
+						<p><b>E. Campos</b></p>
+						<p><i>Elsevier Reviewer Recognition</i></p>
+						<button class="button"><a href="papers/Certificate_INFSOF_Recognised.pdf">Certificate</a></button>
+						<!--<button class="button"><a href="papers/ist19.bib">BibTex</a></button>-->						
+					</div>
+				</div>
+				<div class="fh5co-entry padding">
 					<img src="images/project-5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<div>
 						<span class="fh5co-post-date">April 12, 2019</span>
 						<h2><a href="thesis19.html">Recommending Knowledge Available in Q&A Sites for Aiding Software Development and Debugging (in portuguese)</a></h2>
 						<p><b>E. Campos</b></p>
 						<p><i>Ph.D. Thesis - Federal University of Uberlândia</i></p>
-						<button class="button"><a href="papers/eduardo_thesis.pdf">Thesis</a></button>
+						<button class="button"><a href="papers/eduardo_thesis.pdf"></a>Thesis</button>
 						<!--<button class="button"><a href="papers/ist19.bib">BibTex</a></button>-->						
 					</div>
 				</div>
