Material em Python para as disciplinas de PC2 e Lab. PC2

--- a/poo-python.html
+++ b/poo-python.html
@@ -70,23 +70,22 @@
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
 				<span>Disciplinas 2º Semestre de 2022 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
-				<span>Prof. Dr. Eduardo Cunha Campos</span>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<div>
+					<!--<div>
 					<b>Plano e Material extra:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/poo/backes/plano_pc2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
+					<li><i class="icon-book"></i><a href="aulas/poo/caelum_java.pdf"> Caelum Java <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>
+					</div>-->
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(13/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
+					<li>Prova 1 - 25 pts <b>(13/09)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)--></li>
 					<li>Prova 2 - 30 pts <b>(18/10)</b> <!--<img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 06, 07 e 08 </i>)--></li>
 					<li>Prova 3 - 30 pts <b>(06/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
 					<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
@@ -95,7 +94,7 @@
 					<li><a href="aulas/poo/backes/lista2_pc2.pdf"> Lista 02 - 7,5 pts <b>(06/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>		
 					</ul>
 					</div>  
-					<b>Material:</b> 
+					<b>Material em Python:</b> 
 					<div>
 						<ul>	
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAComputacao.pdf"> Aula 01 - Introdução à Computação</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
@@ -106,8 +105,10 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython06-Listas_Tuplas_Dicionarios.pdf"> Aula 06 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython07-Strings.pdf"> Aula 07 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Funcoes.pdf"> Aula 08 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pdf"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pdf"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.idiomas-programacao.pptx"> Aula 11 - Idiomas de Programação </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=L3YnzEmse2Q&t=88s"> Ver Videoaula </a>)--></li>	
 						</ul>
 					</div> 
 					<!-- <div>
